--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,21 +1,31 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'DezyneAndroidKey'
+            keyPassword 'mnbvcx098$MNJF'
+            storeFile file('/Users/dheerajkaushik/keystore/android.jks')
+            storePassword 'letscatch098'
+        }
+    }
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
-
     defaultConfig {
-        applicationId "name.domain.com.virtualassistanttest"
+        applicationId "in.dezyne.virtualassistant"
         minSdkVersion 21
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        signingConfig signingConfigs.config
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    productFlavors {
     }
 }
 
